# busypinger

./: .gitignore  .gitmodules  CMakeLists.txt  config.xml  main.cpp  payload.cpp  service.hpp  service_base.cpp  service_base.hpp
client/: MyListDelegate.qml  QmlEnvVar.cpp  QmlEnvVar.h  main.cpp  main.qml  qml.qrc
server/: main.cpp  payload.cpp  payload.hpp  service.hpp  service_base.cpp  service_base.hpp
